--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,14 @@
 
 
 
-<!--    <dependencies>-->
-<!--        <dependency>-->
-<!--            <groupId>org.apache.commons</groupId>-->
-<!--            <artifactId>commons-math3</artifactId>-->
-<!--            <version>3.6</version>-->
-<!--        </dependency>-->
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.6</version>
+        </dependency>
 
-<!--    </dependencies>-->
+    </dependencies>
 
     <build>
         <pluginManagement>
